Fix #6308: dropdown not to be too narrow

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/open-select1/open-select1.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/open-select1/open-select1.less
@@ -18,8 +18,8 @@
         .fr-component-group {
             width: 100%;
             display: flex;
-            .xforms-select1 { width: auto; max-width: 50%; margin-right: 10px }
-            .xforms-input   { width: 100% }
+            .xforms-select1 { max-width: 50%; margin-right: 10px }
+            .xforms-input   { flex: 1 1 }
         }
     }
 
